// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`proxies admin requests creates reports of a repo. 1`] = `
Array [
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "id": 1,
    "reasonType": "com.atproto.moderation.defs#reasonSpam",
    "reportedBy": "user(0)",
    "subject": Object {
      "$type": "com.atproto.admin.defs#repoRef",
      "did": "user(1)",
    },
  },
  Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "id": 2,
    "reason": "impersonation",
    "reasonType": "com.atproto.moderation.defs#reasonOther",
    "reportedBy": "user(2)",
    "subject": Object {
      "$type": "com.atproto.admin.defs#repoRef",
      "did": "user(1)",
    },
  },
]
`;

exports[`proxies admin requests fetches a list of actions. 1`] = `
Object {
  "actions": Array [
    Object {
      "action": "com.atproto.admin.defs#acknowledge",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "createdBy": "did:example:admin",
      "id": 3,
      "reason": "Y",
      "resolvedReportIds": Array [],
      "reversal": Object {
        "createdAt": "1970-01-01T00:00:00.000Z",
        "createdBy": "did:example:admin",
        "reason": "X",
      },
      "subject": Object {
        "$type": "com.atproto.admin.defs#repoRef",
        "did": "user(0)",
      },
      "subjectBlobCids": Array [],
    },
    Object {
      "action": "com.atproto.admin.defs#flag",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "createdBy": "did:example:admin",
      "id": 2,
      "reason": "Y",
      "resolvedReportIds": Array [
        2,
        1,
      ],
      "subject": Object {
        "$type": "com.atproto.repo.strongRef",
        "cid": "cids(0)",
        "uri": "record(0)",
      },
      "subjectBlobCids": Array [],
    },
  ],
  "cursor": "2",
}
`;

exports[`proxies admin requests fetches a list of reports. 1`] = `
Object {
  "cursor": "2",
  "reports": Array [
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "id": 1,
      "reasonType": "com.atproto.moderation.defs#reasonSpam",
      "reportedBy": "user(0)",
      "resolvedByActionIds": Array [
        2,
      ],
      "subject": Object {
        "$type": "com.atproto.admin.defs#repoRef",
        "did": "user(1)",
      },
      "subjectRepoHandle": "bob.test",
    },
    Object {
      "createdAt": "1970-01-01T00:00:00.000Z",
      "id": 2,
      "reason": "impersonation",
      "reasonType": "com.atproto.moderation.defs#reasonOther",
      "reportedBy": "user(2)",
      "resolvedByActionIds": Array [
        2,
      ],
      "subject": Object {
        "$type": "com.atproto.admin.defs#repoRef",
        "did": "user(1)",
      },
      "subjectRepoHandle": "bob.test",
    },
  ],
}
`;

exports[`proxies admin requests fetches action details. 1`] = `
Object {
  "action": "com.atproto.admin.defs#acknowledge",
  "createdAt": "1970-01-01T00:00:00.000Z",
  "createdBy": "did:example:admin",
  "id": 3,
  "reason": "Y",
  "resolvedReports": Array [],
  "reversal": Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "createdBy": "did:example:admin",
    "reason": "X",
  },
  "subject": Object {
    "$type": "com.atproto.admin.defs#repoView",
    "did": "user(0)",
    "email": "bob@test.com",
    "handle": "bob.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "invitedBy": Object {
      "available": 10,
      "code": "invite-code",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "createdBy": "admin",
      "disabled": false,
      "forAccount": "admin",
      "uses": Array [
        Object {
          "usedAt": "1970-01-01T00:00:00.000Z",
          "usedBy": "user(1)",
        },
        Object {
          "usedAt": "1970-01-01T00:00:00.000Z",
          "usedBy": "user(0)",
        },
        Object {
          "usedAt": "1970-01-01T00:00:00.000Z",
          "usedBy": "user(2)",
        },
        Object {
          "usedAt": "1970-01-01T00:00:00.000Z",
          "usedBy": "user(3)",
        },
      ],
    },
    "invitesDisabled": true,
    "moderation": Object {},
    "relatedRecords": Array [
      Object {
        "$type": "app.bsky.actor.profile",
        "avatar": Object {
          "$type": "blob",
          "mimeType": "image/jpeg",
          "ref": Object {
            "$link": "cids(0)",
          },
          "size": 3976,
        },
        "description": "hi im bob label_me",
        "displayName": "bobby",
      },
    ],
  },
  "subjectBlobs": Array [],
}
`;

exports[`proxies admin requests fetches record details. 1`] = `
Object {
  "blobCids": Array [],
  "blobs": Array [],
  "cid": "cids(0)",
  "indexedAt": "1970-01-01T00:00:00.000Z",
  "labels": Array [],
  "moderation": Object {
    "actions": Array [
      Object {
        "action": "com.atproto.admin.defs#flag",
        "createdAt": "1970-01-01T00:00:00.000Z",
        "createdBy": "did:example:admin",
        "id": 2,
        "reason": "Y",
        "resolvedReportIds": Array [
          2,
          1,
        ],
        "subject": Object {
          "$type": "com.atproto.repo.strongRef",
          "cid": "cids(0)",
          "uri": "record(0)",
        },
        "subjectBlobCids": Array [],
      },
    ],
    "currentAction": Object {
      "action": "com.atproto.admin.defs#flag",
      "id": 2,
    },
    "reports": Array [],
  },
  "repo": Object {
    "did": "user(0)",
    "email": "bob@test.com",
    "handle": "bob.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "invitedBy": Object {
      "available": 10,
      "code": "invite-code",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "createdBy": "admin",
      "disabled": false,
      "forAccount": "admin",
      "uses": Array [
        Object {
          "usedAt": "1970-01-01T00:00:00.000Z",
          "usedBy": "user(1)",
        },
        Object {
          "usedAt": "1970-01-01T00:00:00.000Z",
          "usedBy": "user(0)",
        },
        Object {
          "usedAt": "1970-01-01T00:00:00.000Z",
          "usedBy": "user(2)",
        },
        Object {
          "usedAt": "1970-01-01T00:00:00.000Z",
          "usedBy": "user(3)",
        },
      ],
    },
    "invitesDisabled": true,
    "moderation": Object {
      "currentAction": Object {
        "action": "com.atproto.admin.defs#acknowledge",
        "id": 3,
      },
    },
    "relatedRecords": Array [
      Object {
        "$type": "app.bsky.actor.profile",
        "avatar": Object {
          "$type": "blob",
          "mimeType": "image/jpeg",
          "ref": Object {
            "$link": "cids(1)",
          },
          "size": 3976,
        },
        "description": "hi im bob label_me",
        "displayName": "bobby",
      },
    ],
  },
  "uri": "record(0)",
  "value": Object {
    "$type": "app.bsky.feed.post",
    "createdAt": "1970-01-01T00:00:00.000+00:00",
    "text": "bobby boy here",
  },
}
`;

exports[`proxies admin requests fetches repo details. 1`] = `
Object {
  "did": "user(0)",
  "email": "eve@test.com",
  "handle": "eve.test",
  "indexedAt": "1970-01-01T00:00:00.000Z",
  "invitedBy": Object {
    "available": 1,
    "code": "invite-code",
    "createdAt": "1970-01-01T00:00:00.000Z",
    "createdBy": "admin",
    "disabled": false,
    "forAccount": "user(1)",
    "uses": Array [
      Object {
        "usedAt": "1970-01-01T00:00:00.000Z",
        "usedBy": "user(0)",
      },
    ],
  },
  "invites": Array [],
  "invitesDisabled": false,
  "labels": Array [],
  "moderation": Object {
    "actions": Array [],
    "reports": Array [],
  },
  "relatedRecords": Array [],
}
`;

exports[`proxies admin requests fetches report details. 1`] = `
Object {
  "createdAt": "1970-01-01T00:00:00.000Z",
  "id": 1,
  "reasonType": "com.atproto.moderation.defs#reasonSpam",
  "reportedBy": "user(0)",
  "resolvedByActions": Array [
    Object {
      "action": "com.atproto.admin.defs#flag",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "createdBy": "did:example:admin",
      "id": 2,
      "reason": "Y",
      "resolvedReportIds": Array [
        2,
        1,
      ],
      "subject": Object {
        "$type": "com.atproto.repo.strongRef",
        "cid": "cids(1)",
        "uri": "record(0)",
      },
      "subjectBlobCids": Array [],
    },
  ],
  "subject": Object {
    "$type": "com.atproto.admin.defs#repoView",
    "did": "user(1)",
    "email": "bob@test.com",
    "handle": "bob.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "invitedBy": Object {
      "available": 10,
      "code": "invite-code",
      "createdAt": "1970-01-01T00:00:00.000Z",
      "createdBy": "admin",
      "disabled": false,
      "forAccount": "admin",
      "uses": Array [
        Object {
          "usedAt": "1970-01-01T00:00:00.000Z",
          "usedBy": "user(0)",
        },
        Object {
          "usedAt": "1970-01-01T00:00:00.000Z",
          "usedBy": "user(1)",
        },
        Object {
          "usedAt": "1970-01-01T00:00:00.000Z",
          "usedBy": "user(2)",
        },
        Object {
          "usedAt": "1970-01-01T00:00:00.000Z",
          "usedBy": "user(3)",
        },
      ],
    },
    "invitesDisabled": true,
    "moderation": Object {
      "currentAction": Object {
        "action": "com.atproto.admin.defs#acknowledge",
        "id": 3,
      },
    },
    "relatedRecords": Array [
      Object {
        "$type": "app.bsky.actor.profile",
        "avatar": Object {
          "$type": "blob",
          "mimeType": "image/jpeg",
          "ref": Object {
            "$link": "cids(0)",
          },
          "size": 3976,
        },
        "description": "hi im bob label_me",
        "displayName": "bobby",
      },
    ],
  },
}
`;

exports[`proxies admin requests reverses action. 1`] = `
Object {
  "action": "com.atproto.admin.defs#acknowledge",
  "createdAt": "1970-01-01T00:00:00.000Z",
  "createdBy": "did:example:admin",
  "id": 3,
  "reason": "Y",
  "resolvedReportIds": Array [],
  "reversal": Object {
    "createdAt": "1970-01-01T00:00:00.000Z",
    "createdBy": "did:example:admin",
    "reason": "X",
  },
  "subject": Object {
    "$type": "com.atproto.admin.defs#repoRef",
    "did": "user(0)",
  },
  "subjectBlobCids": Array [],
}
`;

exports[`proxies admin requests searches repos. 1`] = `
Array [
  Object {
    "did": "user(0)",
    "handle": "alice.test",
    "indexedAt": "1970-01-01T00:00:00.000Z",
    "moderation": Object {},
    "relatedRecords": Array [
      Object {
        "$type": "app.bsky.actor.profile",
        "avatar": Object {
          "$type": "blob",
          "mimeType": "image/jpeg",
          "ref": Object {
            "$link": "cids(0)",
          },
          "size": 3976,
        },
        "description": "its me!",
        "displayName": "ali",
        "labels": Object {
          "$type": "com.atproto.label.defs#selfLabels",
          "values": Array [
            Object {
              "val": "self-label-a",
            },
            Object {
              "val": "self-label-b",
            },
          ],
        },
      },
    ],
  },
]
`;

exports[`proxies admin requests takes actions and resolves reports 1`] = `
Object {
  "action": "com.atproto.admin.defs#flag",
  "createdAt": "1970-01-01T00:00:00.000Z",
  "createdBy": "did:example:admin",
  "id": 2,
  "reason": "Y",
  "resolvedReportIds": Array [],
  "subject": Object {
    "$type": "com.atproto.repo.strongRef",
    "cid": "cids(0)",
    "uri": "record(0)",
  },
  "subjectBlobCids": Array [],
}
`;

exports[`proxies admin requests takes actions and resolves reports 2`] = `
Object {
  "action": "com.atproto.admin.defs#acknowledge",
  "createdAt": "1970-01-01T00:00:00.000Z",
  "createdBy": "did:example:admin",
  "id": 3,
  "reason": "Y",
  "resolvedReportIds": Array [],
  "subject": Object {
    "$type": "com.atproto.admin.defs#repoRef",
    "did": "user(0)",
  },
  "subjectBlobCids": Array [],
}
`;

exports[`proxies admin requests takes actions and resolves reports 3`] = `
Object {
  "action": "com.atproto.admin.defs#flag",
  "createdAt": "1970-01-01T00:00:00.000Z",
  "createdBy": "did:example:admin",
  "id": 2,
  "reason": "Y",
  "resolvedReportIds": Array [
    2,
    1,
  ],
  "subject": Object {
    "$type": "com.atproto.repo.strongRef",
    "cid": "cids(0)",
    "uri": "record(0)",
  },
  "subjectBlobCids": Array [],
}
`;
